完成breeding模块剩下的功能以及slaughter模块的所有功能实现，已通过测试